refactor(graphql): adopt hybrid searchLatestPerGroup batch path
Rename to searchLatestPerGroup (latest=1), keep feature-flag kill switch,
use per-source filter for single-key batches, return empty results for
missing groups, and fail loud on aggregation errors.

Co-authored-by: Ben Blazke <benjiaming@users.noreply.github.com>